--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,8 +26,9 @@ services:
     ports:
       - "8000:8000"
     command: >
-      sh -c "python manage.py migrate &&
-             python manage.py runserver 0.0.0.0:8000"
+      sh -c "python manage.py collectstatic --noinput &&
+           python manage.py migrate &&
+           python manage.py runserver 0.0.0.0:8000"
 
 volumes:
   pgdata:
