--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Django>=5.0
-psycopg[binary]>=3.1
-python-dotenv>=1.0
-django-debug-toolbar
-whitenoise
+whitenoise==6.11.0
+django-debug-toolbar==6.0.0
+Django==5.2.7
+psycopg-binary==3.2.12
+pandas==2.3.3
